--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.17",
+    "@types/react-native-vector-icons": "^6.4.18",
     "axios": "^1.7.2",
     "formik": "^2.4.6",
     "react": "18.2.0",
