--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@reduxjs/toolkit": "^2.2.5",
     "@types/react-native-vector-icons": "^6.4.18",
     "axios": "^1.7.2",
     "formik": "^2.4.6",
@@ -47,5 +50,5 @@
   "engines": {
     "node": ">=18"
   },
-  "packageManager": "yarn@3.6.4"
+  "packageManager": "yarn@1.22.22"
 }
