--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "axios": "^1.7.2",
     "formik": "^2.4.6",
+    "lottie-react-native": "^6.7.2",
+    "moment-timezone": "^0.5.45",
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-gesture-handler": "^2.16.2",
